cabal-version: 3.0
name: book
version: 0
data-files: **/*.txt

library
    default-language: Haskell2010
    default-extensions: BlockArguments QuasiQuotes
                        TypeApplications ScopedTypeVariables
    -- ghc-options: -Wall -Wno-unused-imports -fdefer-typed-holes
    ghc-options: -Wall -Wno-missing-signatures -fdefer-typed-holes
    build-depends: sockets-and-pipes ^>= 0.3
    exposed-modules: Template
