[tool.poetry]
name = "flakes"
version = "0.1.0"
description = ""
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
sphinx = "^5.3.0"
djlint = "^1.19.7"
pylance = "^0.2.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable="""
    missing-function-docstring,
    missing-module-docstring,
    invalid-name
"""