[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
pylint = "^2.15.5"
mysql-connector-python = "^8.0.31"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
    